<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:background="@drawable/bg_simple">

    <TextView
        android:id="@+id/divPrepPanierAdd_depot"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_butt2"
        android:gravity="center"
        android:textColor="@color/Black"
        android:textSize="17sp"
        android:hint="@string/divPrepPanierAdd_depot"
        />

    <TextView
        android:id="@+id/divPrepPanierAdd_pr"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_butt2"
        android:gravity="center"
        android:textColor="@color/Black"
        android:textSize="17sp"
        android:hint="@string/divPrepPanierAdd_pr"
        />



    <EditText
        android:id="@+id/divPrepPanierAdd_lot"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_butt2"
        android:gravity="center"
        android:textColor="@color/Black"
        android:textSize="17sp"
        android:hint="@string/divPrepPanierAdd_lot"
        android:text=""
        />

    <EditText
        android:id="@+id/divPrepPanierAdd_qt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:inputType="numberDecimal"
        android:background="@drawable/bg_butt2"
        android:gravity="center"
        android:textColor="@color/Black"
        android:textSize="17sp"
        android:hint="@string/divPrepPanierAdd_qt"
        />

    <TextView
        android:id="@+id/divPrPanierAdd_valider"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/bg_butt"
        android:text="@string/add_pr_valider"
        android:textSize="17dp"
        android:textColor="@color/White"/>

</LinearLayout>