<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:background="@color/White">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:fontFamily="@font/cairo_semibold"
    android:textSize="20sp"
    android:textColor="@color/Black"
    android:text="@string/divTypeProd_msg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:id="@+id/divTypeProd_prod"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginRight="5dp"
            android:background="@color/Green"
            android:fontFamily="@font/cairo_semibold"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:text="@string/divTypeProd_prod"/>
        <TextView
            android:id="@+id/divTypeProd_prep"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:background="@color/Red"
            android:fontFamily="@font/cairo_semibold"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:text="@string/divTypeProd_prep"/>
    </LinearLayout>
</LinearLayout>