<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_simple"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.leadersoft.celtica.lsprod.Productions.AddStock">
    <TextView
        android:id="@+id/add_pr_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/cairo_semibold"
        android:textAlignment="center"
        android:textColor="@color/AppColor"
        android:textSize="20sp"
        android:text=""/>
    <TextView
        android:id="@+id/add_stock_codebar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/bg_butt2"
        android:fontFamily="@font/cairo_semibold"
        android:textColorHint="@color/Gray2"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/Black"
        android:hint="@string/add_pr_codebar_hint"/>

    <TextView
        android:id="@+id/add_stock_depot"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:visibility="gone"
        android:gravity="center"
        android:background="@drawable/bg_butt2"
        android:fontFamily="@font/cairo_semibold"
        android:textColorHint="@color/Gray2"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/Black"
        android:hint="@string/add_pr_depot"/>

    <EditText
        android:id="@+id/add_stock_qt"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="13dp"
        android:inputType="number"
        android:background="@drawable/bg_butt2"
        android:fontFamily="@font/cairo_semibold"
        android:textColorHint="@color/Gray2"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/Black"
        android:hint="@string/add_pr_qt_hint"/>

    <TextView
        android:id="@+id/add_pr_valider"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/bg_butt"
        android:fontFamily="@font/cairo_semibold"
         android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/White"
        android:textSize="18sp"
        android:text="@string/add_pr_valider"/>

</LinearLayout>
